# rust-chat-room

./: README.md
browser/: README.md  package-lock.json  package.json  terraform-output.js
browser/src/components/: Welcome.astro
browser/src/components/CamouflageInputText/: CamouflageInputText.css  CamouflageInputText.tsx
browser/src/components/ChatRoom/: ChatRoom.css  ChatRoom.tsx
browser/src/components/MessageInput/: MessageInput.css  MessageInput.tsx
browser/src/components/MessageView/: MessageView.css  MessageView.tsx
browser/src/components/NameInput/: NameInput.tsx
browser/src/components/RoomHeader/: RoomHeader.css  RoomHeader.tsx
browser/src/pages/room/: one.astro
browser/src/services/: random.ts  websocket.ts
browser/src/types/: types.ts
server/: Cargo.toml  Dockerfile
server/src/: ws_handler_cloud.rs  ws_handler_local.rs
server/src/database/: attribute_value_parser.rs  db_cloud.rs  db_local.rs  db_trait.rs  mod.rs  websocket_table.rs
server/src/domain/: errors.rs  message.rs  mod.rs  tracing_utils.rs  websocket_record.rs
server/src/notifier/: mod.rs  notifier_cloud.rs  notifier_fake.rs  notifier_local.rs  notifier_trait.rs
server/src/service/: mod.rs  on_connect.rs  on_disconnect.rs  on_message.rs
terraform/: .terraform.lock.hcl  api_gateway_websocket.tf  api_gateway_websocket_endpoints.tf  dynamodb.tf  lambda.tf  main.tf  output.tf
