[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.11"
aws-sdk-apigatewaymanagement = "1.51.0"
aws-sdk-dynamodb = "1.56.0"
axum = { version="0.7.9", features=["ws", "macros"] }
axum-aws-lambda = "0.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
futures-util = "0.3.31"
hyper = "1.5.1"
lambda_http = { version="0.13.0", default-features=false, features=["apigw_http"] }
serde = "1.0.216"
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.0"
tower = "0.5.2"
tower-http = {version="0.6.2", features = ["trace"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
tracing-test = "0.2.5"

[[bin]]
name = "ws_handler_cloud"
path = "src/ws_handler_cloud.rs"

[[bin]]
name = "ws_handler_local"
path = "src/ws_handler_local.rs"
